# D3DFramework

./: CMakeLists.txt  CMakePresets.json  README.md
D3DFramework/: D3DFramework plans.md  Included libraries.md
D3DFramework/.obsidian/: workspace.json
D3DFramework/D3DObjects/: Device.md  Mesh.md  Render target.md
D3DFramework/D3DObjects/Managers/: ResourceManager.md
D3DFramework/D3DObjects/Pipeline/: Pipeline.md  RasterizerState.md  Vertex layout.md
D3DFramework/D3DObjects/Pipeline/Buffers/: Buffer.md  BufferTypes.md  CBufferBinding.md  Constant buffer.md  Standard buffer.md  VertexBuffer.md
D3DFramework/D3DObjects/Pipeline/Views/: ShaderResourceView.md
D3DFramework/Engine/: TimeManager.md  Window.md
D3DFramework/Engine/Input/: Input.md  InputAction.md  InputActionManager.md
engine/: exampleFile.cpp
engine/D3DObjects/: D3DDevice.cpp  D3DDevice.h  Device.cpp  Device.h  ImageTexture.cpp  ImageTexture.h  Mesh.cpp  Mesh.h  RenderTarget.cpp  RenderTarget.h
engine/D3DObjects/Pipeline/: CBuffer.cpp  CBuffer.h  CBufferPlan.txt  Pipeline.cpp  Pipeline.h  PipelineStages.h  RasterizerState.cpp  RasterizerState.h  RenderScreen.cpp  RenderScreen.h  Shader.cpp  Shader.h  VertexLayout.cpp  VertexLayout.h
engine/D3DObjects/Pipeline/Buffers/: Buffer.h  BufferTypes.h  ConstantBuffer.h  StandardBuffer.h
engine/D3DObjects/Pipeline/Textures/: Texture2D.cpp  Texture2D.h  TextureSampler.cpp  TextureSampler.h
engine/D3DObjects/Pipeline/Views/: SRV.cpp  SRV.h
engine/DataManagers/: AssetLoader.cpp  AssetLoader.h  CBufferManager.cpp  CBufferManager.h  DataTypes.h  ResourceManager.cpp  ResourceManager.h  ShaderManager.cpp  ShaderManager.h
engine/Engine/: Delay.cpp  Delay.h  Input.h  Random.cpp  Random.h  TimeManager.cpp  TimeManager.h  Timer.cpp  Timer.h  VectorMathOverloads.h  Window.cpp  Window.h
engine/Engine/Input/: Input.cpp  Input.h  InputAction.cpp  InputAction.h  InputActionFuncs.h  InputActionManager.cpp  InputActionManager.h
engine/shaders/EngineShaders/RenderScreen/: vertex.hlsl
